GetRoomCommand,Views adjustment

--- a/Meeting_Scheduler/Meeting_Scheduler_App/View/AddMeeting.xaml
+++ b/Meeting_Scheduler/Meeting_Scheduler_App/View/AddMeeting.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="MSchedule.View.AddMeeting"
+    x:Class="Meeting_Scheduler_App.View.AddMeeting"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -107,7 +107,7 @@
                 </Grid.RowDefinitions>
                 <StackPanel Margin="20,20,0,0">
                     <StackPanel Orientation="Horizontal">
-                        <CheckBox Content="Projectorrrrrrrr" IsChecked="{Binding CheckProjector, Mode=TwoWay}"  RequestedTheme="Light" Margin="0,0,5,0"/>
+                        <CheckBox Content="Projector" IsChecked="{Binding CheckProjector, Mode=TwoWay}"  RequestedTheme="Light" Margin="0,0,5,0"/>
                         <CheckBox Content="Flipchart" IsChecked="{Binding CheckFlipchart, Mode=TwoWay}" RequestedTheme="Light" Margin="0,0,5,0"/>
                         <CheckBox Content="Phone" IsChecked="{Binding CheckPhone, Mode=TwoWay}" RequestedTheme="Light" Margin="0,0,5,0"/>
                         <CheckBox Content="Camera" IsChecked="{Binding CheckCamera, Mode=TwoWay}" RequestedTheme="Light" Margin="0,0,5,0"/>
