--- a/Meeting_Scheduler/Meeting_Scheduler_App/View/Schedule.xaml
+++ b/Meeting_Scheduler/Meeting_Scheduler_App/View/Schedule.xaml
@@ -1,6 +1,6 @@
 ﻿<Page
     x:Name="pageRoot"
-    x:Class="MSchedule.View.Schedule"
+    x:Class="Meeting_Scheduler_App.View.Schedule"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
