--- a/Meeting_Scheduler/Meeting_Scheduler_App/View/AddMeeting.xaml
+++ b/Meeting_Scheduler/Meeting_Scheduler_App/View/AddMeeting.xaml
@@ -77,7 +77,7 @@
                 		<Run Text="Date:"/>
                 		<Run Foreground="#00000000" Text="_" />
                     </TextBlock>
-                    <DatePicker Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Segoe UI" FontSize="14.667"  RequestedTheme="Light" Date="{Binding Date, Mode=TwoWay}" YearVisible="True" Margin="0,0,-120,0" Width="300"/>
+                    <DatePicker Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" MinYear="01/01/2015" VerticalAlignment="Top" FontFamily="Segoe UI" FontSize="14.667"  RequestedTheme="Light" Date="{Binding Date, Mode=TwoWay}" YearVisible="True" Margin="0,0,-120,0" Width="300"/>
                     <TextBlock Grid.Row="2" FontFamily="Segoe UI" FontSize="14.667"  RequestedTheme="Light">
                 		<Run Text="Timespan:"/>
                 		<Run Foreground="#00000000" Text="_" />
